# amol-opt

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  README.md  h2.xyz  h2o.xyz  main.cpp  opt.xyz  tmp.h
.devcontainer/: Dockerfile  devcontainer.json
include/: atom.h  atom.hpp  connectivity.hpp  coordinate.hpp  ff.hpp  gradient.hpp  molecule.hpp  optimiser.hpp  rbff.hpp  sdoptimiser.hpp  vector3d.hpp
src/: atom.cpp  connectivity.cpp  coordinate.cpp  main.cpp  molecule.cpp  rbff.cpp  sdoptimiser.cpp  vector3d.cpp
